# py-clean-cli

./: .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/agents/: code-refactor-architect.md
.config/: .gitignore
.configs/: .gitignore
.github/: copilot-instructions.md
.github/prompts/: commit.prompt.md  edit-changelog-file.prompt.md  issue.prompt.md  planning.prompt.md
docs/: CHANGELOG.md  README.md
scripts/: __init__.py  __main__.py
scripts/_project_configs/: setup_gitignore.py
scripts/examples/: use_commands.py
src/py_clean_cli/: __init__.py  main.py
src/py_clean_cli/decorators/: __init__.py  command_decorator.py
src/py_clean_cli/helpers/: __init__.py  command_registry_helper.py  discover_commands_helper.py
src/py_clean_cli/models/: __init__.py  commamd_model.py
src/py_clean_cli/services/: __init__.py
src/py_clean_cli/services/factories/: commands_factory.py
src/py_clean_cli/services/managers/: __init__.py  commands_manager.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py
tests/unit/decorators/: __init__.py  test_command_decorator.py
tests/unit/helpers/: test_command_registry_helper.py  test_discover_commands_helper.py
tests/unit/models/: test_command_model.py
tests/unit/services/managers/: test_commands_manager.py
