[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-clean-cli"
dynamic = ["version"]
description = "Clean CLI library with automatic argument parsing from dataclass models"
readme = "docs/README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
  {name = "Yharon Batista", email = "core@ia-rom.com"}
]
keywords = ["cli", "argparse", "dataclass", "command-line", "tool", "automation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]

# Core dependencies only - dev/build tools moved to optional dependencies
dependencies = [
  "simple-parsing>=0.1.7",
]

[project.optional-dependencies]
dev = [
  "black>=23.0.0",
  "poethepoet>=0.24.0",
]
test = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.11.0",
]

[project.urls]
Homepage = "https://github.com/Yharon/py-clean-cli"
Repository = "https://github.com/Yharon/py-clean-cli"
Documentation = "https://github.com/Yharon/py-clean-cli/docs#readme"

[tool.setuptools.packages.find]
where = ["src"]
include = ["py_clean_cli*"]

[tool.setuptools.dynamic]
version = {attr = "py_clean_cli.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "--strict-markers",
  "--strict-config",
  "-ra",
  "--cov=src/py_clean_cli",
  "--cov-report=term-missing",
  "--cov-report=html",
]

[tool.coverage.run]
source = ["src/py_clean_cli"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]

[tool.poe.tasks]
# poe cli
cli.script = "scripts"
# poe test
test.cmd = "pytest"
test.help = "Run all tests with coverage"
